fix: finished the short and long questions.

--- a/exam_1.tex
+++ b/exam_1.tex
@@ -1,6 +1,5 @@
 \documentclass[addpoints]{exam}
-
-
+\pointsinrightmargin
 \begin{document}
 \begin{center}
   Generated Mock Paper using lmpc: \hfill 
@@ -33,6 +32,8 @@ for an answer, continue on the back of the page.}}}
 
   % \question Compute \[\int_{0}^{\infty} \frac{\sin(x)}{x}\]
   \input{questions}
+  \droppoints
 \end{questions}
-\droppoints
+
+
 \end{document}
